--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,13 +13,12 @@ pool:
 
 steps:
 - task: Npm@1
+  displayName: Install npm dependencies
   inputs:
     command: 'install'
+
 - task: Npm@1
-  inputs:
-    command: 'custom'
-    customCommand: 'test'
-- task: Npm@1
+  displayName: Build application
   inputs:
     command: 'custom'
     customCommand: 'run build-prod'
