--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,11 @@ steps:
     command: 'custom'
     customCommand: 'run build-prod'
 
-
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)/dist/angular-test'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
 
