Add publish artifact to CI pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
     customCommand: 'run build-prod'
 
 - task: ArchiveFiles@2
+  displayName: Compress build files
   inputs:
     rootFolderOrFile: 'dist/angular-test/'
     includeRootFolder: true
@@ -31,3 +32,9 @@ steps:
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
 
+- task: PublishBuildArtifacts@1
+  displayName: Publish build files
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
